--- a/trunk/099/pkg/combat/armor/itemdesc.cfg
+++ b/trunk/099/pkg/combat/armor/itemdesc.cfg
@@ -910,6 +910,7 @@ Armor 0x1f0b
 	Coverage		Head
 	MaxHP		90
 	blockcircle	3
+	VendorBuysFor	16
 	script		:combat:equipitem
 	equipscript	:combat:item_equip
 	unequipscript	:combat:item_unequip
