--- a/trunk/099/pkg/items/containers/itemdesc.cfg
+++ b/trunk/099/pkg/items/containers/itemdesc.cfg
@@ -859,6 +859,7 @@ Container 0x2b02
 	RequiresAttention	0
 	VendorSellsFor		10
 	VendorBuysFor		4
+	Weight			1
 	MaxItems			65535
 	Maxweight			65535
 	OnRemoveScript		onremove_chest
@@ -1501,6 +1502,7 @@ Container 0x3171
 	RequiresAttention	0
 	VendorSellsFor		10
 	VendorBuysFor		4
+	Weight			1
 	MaxItems			65535
 	Maxweight			65535
 	OnRemoveScript		onremove_chest
