--- a/trunk/099/pkg/skills/craftingskills/blacksmithy/config/blacksmithy.cfg
+++ b/trunk/099/pkg/skills/craftingskills/blacksmithy/config/blacksmithy.cfg
@@ -112,6 +112,7 @@ blacksmithy 0X0f51
 	bulk_deed		1
 	mark			1
 	retain		1
+	racealt		0x406a
 }
 
 blacksmithy 0x13f6
@@ -125,6 +126,7 @@ blacksmithy 0x13f6
 	bulk_deed		1
 	mark			1
 	retain		1
+	racealt		0x48b6
 }
 
 blacksmithy 0x0ec4
@@ -151,6 +153,7 @@ blacksmithy 0x0ec2
 	bulk_deed		0
 	mark			1
 	retain		1
+	racealt		0x48ae
 }
 
 blacksmithy 0x0f43
@@ -184,6 +187,7 @@ blacksmithy 0X0f5e
 	bulk_deed		1
 	mark			1
 	retain		1
+	racealt		0x4074
 }
 
 blacksmithy 0X1440
@@ -197,6 +201,7 @@ blacksmithy 0X1440
 	bulk_deed		1
 	mark			1
 	retain		1
+	racealt		0x48ba
 }
 
 blacksmithy 0X13fe
@@ -210,6 +215,7 @@ blacksmithy 0X13fe
 	bulk_deed		1
 	mark			1
 	retain		1
+	racealt		0x48ba
 }
 
 blacksmithy 0X0f60
@@ -223,6 +229,7 @@ blacksmithy 0X0f60
 	bulk_deed		1
 	mark			1
 	retain		1
+	racealt		0x4074
 }
 
 blacksmithy 0X13b5
@@ -236,6 +243,21 @@ blacksmithy 0X13b5
 	bulk_deed		1
 	mark			1
 	retain		1
+	racealt		0x48ba
+}
+
+blacksmithy 0x0f47
+{ 
+	Name			battle axe
+	material		30
+	type			metal
+	skill		65
+	time			4
+	Exceptional	1
+	bulk_deed		1
+	mark			1
+	retain		1
+	racealt		0x48c6
 }
 
 
@@ -256,6 +278,7 @@ blacksmithy 0X1401
 	bulk_deed		1
 	mark			1
 	retain		1
+	racealt		0x48bc
 }
 
 blacksmithy 0X13b7
@@ -269,6 +292,7 @@ blacksmithy 0X13b7
 	bulk_deed		1
 	mark			1
 	retain		1
+	racealt		0x4076
 }
 
 blacksmithy 0x1404
@@ -282,6 +306,7 @@ blacksmithy 0x1404
 	bulk_deed		1
 	mark			1
 	retain		1
+	racealt		0x48be
 }
 
 
@@ -302,6 +327,7 @@ blacksmithy 0x13af
 	bulk_deed		1
 	mark			1
 	retain		1
+	racealt		0x406e
 }
 
 blacksmithy 0X0f5c
@@ -315,6 +341,7 @@ blacksmithy 0X0f5c
 	bulk_deed		1
 	mark			1
 	retain		1
+	racealt		0x406e
 }
 
 blacksmithy 0X143a
@@ -328,6 +355,7 @@ blacksmithy 0X143a
 	bulk_deed		1
 	mark			1
 	retain		1
+	racealt		0x48c2
 }
 
 blacksmithy 0x143c
@@ -341,6 +369,7 @@ blacksmithy 0x143c
 	bulk_deed		1
 	mark			1
 	retain		1
+	racealt		0x48c2
 }
 
 tinkeritem 0x0fb4
@@ -373,6 +402,7 @@ blacksmithy 0X13b9
 	bulk_deed		1
 	mark			1
 	retain		1
+	racealt		0x4075
 }
 
 blacksmithy 0x0f49
@@ -386,19 +416,7 @@ blacksmithy 0x0f49
 	bulk_deed		1
 	mark			1
 	retain		1
-}
-
-blacksmithy 0x0f47
-{ 
-	Name			battle axe
-	material		40
-	type			metal
-	skill		85
-	time			5
-	Exceptional	1
-	bulk_deed		1
-	mark			1
-	retain		1
+	racealt		0x48b2
 }
 
 blacksmithy 0x0f4b
@@ -412,6 +430,7 @@ blacksmithy 0x0f4b
 	bulk_deed		1
 	mark			1
 	retain		1
+	racealt		0x48b0
 }
  
 blacksmithy 0x0f45
@@ -425,6 +444,7 @@ blacksmithy 0x0f45
 	bulk_deed		1
 	mark			1
 	retain		1
+	racealt		0x48b2
 }
 
 blacksmithy 0x13fa
@@ -438,6 +458,7 @@ blacksmithy 0x13fa
 	bulk_deed		1
 	mark			1
 	retain		1
+	racealt		0x48b0
 }
 
 blacksmithy 0x1442
@@ -451,6 +472,7 @@ blacksmithy 0x1442
 	bulk_deed		1
 	mark			1
 	retain		1
+	racealt		0x48b0
 }
 
 blacksmithy 0x0f4e
@@ -464,6 +486,7 @@ blacksmithy 0x0f4e
 	bulk_deed		1
 	mark			1
 	retain		1
+	racealt		0x48b4
 }
 
 blacksmithy 0X143e
@@ -477,6 +500,7 @@ blacksmithy 0X143e
 	bulk_deed		1
 	mark			1
 	retain		1
+	racealt		0x48b4
 }
 
 
@@ -496,6 +520,7 @@ blacksmithy 0X1402
 	bulk_deed		1
 	mark			1
 	retain		1
+	racealt		0x406d
 }
 
 blacksmithy 0x0f63
@@ -509,6 +534,7 @@ blacksmithy 0x0f63
 	bulk_deed		1
 	mark			1
 	retain		1
+	racealt		0x406d
 }
 
 blacksmithy 0x0e87
@@ -522,6 +548,7 @@ blacksmithy 0x0e87
 	bulk_deed		1
 	mark			1
 	retain		1
+	racealt		0x406d
 }
 
 
@@ -542,6 +569,7 @@ blacksmithy 0x1438
 	bulk_deed		1
 	mark			1
 	retain		1
+	racealt		0x48c2
 }
 
 blacksmithy 0X1406
@@ -555,6 +583,7 @@ blacksmithy 0X1406
 	bulk_deed		1
 	mark			1
 	retain		1
+	racealt		0x48c2
 }
 
 
@@ -804,6 +833,7 @@ blacksmithy 0X1b73
 	bulk_deed		1
 	mark			1
 	retain		1
+	racealt		0x4202
 }
 
 blacksmithy 0X1b72
@@ -817,6 +847,7 @@ blacksmithy 0X1b72
 	bulk_deed		1
 	mark			1
 	retain		1
+	racealt		0x4203
 }
 
 blacksmithy 0X1b7b
@@ -830,6 +861,7 @@ blacksmithy 0X1b7b
 	bulk_deed		1
 	mark			1
 	retain		1
+	racealt		0x4203
 }
 
 blacksmithy 0X1b76
@@ -843,6 +875,7 @@ blacksmithy 0X1b76
 	bulk_deed		1
 	mark			1
 	retain		1
+	racealt		0x4204
 }
 
 blacksmithy 0X1b74
@@ -856,6 +889,7 @@ blacksmithy 0X1b74
 	bulk_deed		1
 	mark			1
 	retain		1
+	racealt		0x4204
 }
 
 blacksmithy 0X1bc4
@@ -869,6 +903,7 @@ blacksmithy 0X1bc4
 	bulk_deed		1
 	mark			1
 	retain		1
+	racealt		0x422a
 }
 
 blacksmithy 0X1bc3
@@ -882,6 +917,7 @@ blacksmithy 0X1bc3
 	bulk_deed		1
 	mark			1
 	retain		1
+	racealt		0x4228
 }
 
 
@@ -972,6 +1008,7 @@ blacksmithy 0X26ba
 	bulk_deed		1
 	mark			1
 	retain		1
+	racealt		0x48c4
 }
 
 blacksmithy 0X26bb
@@ -985,6 +1022,7 @@ blacksmithy 0X26bb
 	bulk_deed		1
 	mark			1
 	retain		1
+	racealt		0x48c6
 }
 
 blacksmithy 0x26bc
@@ -998,6 +1036,7 @@ blacksmithy 0x26bc
 	bulk_deed		1
 	mark			1
 	retain		1
+	racealt		0x406e
 }
 
 blacksmithy 0X26bd
@@ -1011,6 +1050,7 @@ blacksmithy 0X26bd
 	bulk_deed		1
 	mark			1
 	retain		1
+	racealt		0x48b4
 }
 
 blacksmithy 0x26be
@@ -1024,6 +1064,7 @@ blacksmithy 0x26be
 	bulk_deed		1
 	mark			1
 	retain		1
+	racealt		0x48c8
 }
 
 blacksmithy 0x26bf
@@ -1037,6 +1078,7 @@ blacksmithy 0x26bf
 	bulk_deed		1
 	mark			1
 	retain		1
+	racealt		0x48c8
 }
 
 blacksmithy 0x26c0
@@ -1050,6 +1092,7 @@ blacksmithy 0x26c0
 	bulk_deed		1
 	mark			1
 	retain		1
+	racealt		0x48ca
 }
 
 blacksmithy 0X26c1
@@ -1063,6 +1106,7 @@ blacksmithy 0X26c1
 	bulk_deed		1
 	mark			1
 	retain		1
+	racealt		0x48b4
 }
 
 blacksmithy 0X26ce
@@ -1076,6 +1120,7 @@ blacksmithy 0X26ce
 	bulk_deed		1
 	mark			1
 	retain		1
+	racealt		0x4075
 }
 
 // Armor
@@ -1109,6 +1154,7 @@ blacksmithy 0x27a4
 	bulk_deed		0
 	mark			1
 	retain		1
+	racealt		0x48ba
 }
 
 blacksmithy 0x27a2
@@ -1122,6 +1168,7 @@ blacksmithy 0x27a2
 	bulk_deed		0
 	mark			1
 	retain		1
+	racealt		0x4075
 }
 
 blacksmithy 0x27a3
@@ -1135,6 +1182,7 @@ blacksmithy 0x27a3
 	bulk_deed		0
 	mark			1
 	retain		1
+	racealt		0x48cc
 }
 
 blacksmithy 0x27a7
@@ -1148,6 +1196,7 @@ blacksmithy 0x27a7
 	bulk_deed		0
 	mark			1
 	retain		1
+	racealt		0x48c8
 }
 
 blacksmithy 0X27a9
@@ -1161,6 +1210,7 @@ blacksmithy 0X27a9
 	bulk_deed		0
 	mark			1
 	retain		1
+	racealt		0x48d0
 }
 
 blacksmithy 0X27ab
@@ -1174,6 +1224,7 @@ blacksmithy 0X27ab
 	bulk_deed		0
 	mark			1
 	retain		1
+	racealt		0x48ce
 }
 
 blacksmithy 0X27ad
@@ -1187,6 +1238,7 @@ blacksmithy 0X27ad
 	bulk_deed		0
 	mark			1
 	retain		1
+	racealt		0x48ce
 }
 
 blacksmithy 0X27af
@@ -1200,6 +1252,7 @@ blacksmithy 0X27af
 	bulk_deed		0
 	mark			1
 	retain		1
+	racealt		0x48ce
 }
 
 blacksmithy 0x2804
@@ -1433,6 +1486,7 @@ blacksmithy 0x2d2c
 	bulk_deed		1
 	mark			1
 	retain		1
+	racealt		0x48c8
 }
 
 blacksmithy 0x2d2d
@@ -1446,6 +1500,7 @@ blacksmithy 0x2d2d
 	bulk_deed		1
 	mark			1
 	retain		1
+	racealt		0x406a
 }
 
 blacksmithy 0x2d2e
@@ -1459,6 +1514,7 @@ blacksmithy 0x2d2e
 	bulk_deed		1
 	mark			1
 	retain		1
+	racealt		0x4072
 }
 
 blacksmithy 0x2d2f
@@ -1472,6 +1528,7 @@ blacksmithy 0x2d2f
 	bulk_deed		1
 	mark			1
 	retain		1
+	racealt		0x4072
 }
 
 blacksmithy 0x2d30
@@ -1485,6 +1542,7 @@ blacksmithy 0x2d30
 	bulk_deed		1
 	mark			1
 	retain		1
+	racealt		0x406e
 }
 
 blacksmithy 0X2d32
@@ -1498,6 +1556,7 @@ blacksmithy 0X2d32
 	bulk_deed		1
 	mark			1
 	retain		1
+	racealt		0x4068
 }
 
 blacksmithy 0x2d33
@@ -1511,6 +1570,7 @@ blacksmithy 0x2d33
 	bulk_deed		1
 	mark			1
 	retain		1
+	racealt		0x48b4
 }
 
 blacksmithy 0X2d34
@@ -1524,6 +1584,7 @@ blacksmithy 0X2d34
 	bulk_deed		1
 	mark			1
 	retain		1
+	racealt		0x48b2
 }
 
 blacksmithy 0x2d35
@@ -1537,6 +1598,7 @@ blacksmithy 0x2d35
 	bulk_deed		1
 	mark			1
 	retain		1
+	racealt		0x48ba
 }
 
 //////////////////
