--- a/trunk/099/pkg/skills/craftingskills/tinkering/config/itemdesc.cfg
+++ b/trunk/099/pkg/skills/craftingskills/tinkering/config/itemdesc.cfg
@@ -341,6 +341,7 @@ Item 0x2804
 	Desc			dart%s
 	Weight		1/50
 	VendorSellsFor	5
+	VendorBuysFor	2
 }
 
 Item 0x16055
@@ -368,6 +369,7 @@ Item 0x27ac
 	Name			shuriken
 	Weight		1/50
 	VendorSellsFor	5
+	VendorBuysFor	2
 }
 
 Item 0x16057
@@ -395,6 +397,7 @@ Item 0x255d
 	Name			throwingaxe
 	Weight		1/50
 	VendorSellsFor	5
+	VendorBuysFor	2
 }
 
 Item 0x16059
