--- a/trunk/099/pkg/skills/craftingskills/woodworking/config/itemdesc.cfg
+++ b/trunk/099/pkg/skills/craftingskills/woodworking/config/itemdesc.cfg
@@ -102,6 +102,7 @@ Item 0x0f3f
 {
 	Name			arrow
 	VendorSellsFor	5
+	VendorBuysFor	2
 	Weight		1/50
 }
 
@@ -110,6 +111,7 @@ Item 0x1bfb
 	Name			bolt
 	Name			crossbowbolt
 	VendorSellsFor	5
+	VendorBuysFor	2
 	Weight		1/50
 }
 
