--- a/trunk/099/pkg/items/containers/itemdesc.cfg
+++ b/trunk/099/pkg/items/containers/itemdesc.cfg
@@ -865,7 +865,7 @@ Container 0x2b02
 	OnRemoveScript		onremove_chest
 	CanRemoveScript	canremove_chest
 	OnInsertScript		oninsert_chest
-	CanInsertScript	caninsert_chest
+	CanInsertScript	caninsert_quiver
 	equipscript	:combat:item_equip
 	unequipscript	:combat:item_unequip
 }
@@ -1508,7 +1508,7 @@ Container 0x3171
 	OnRemoveScript		onremove_chest
 	CanRemoveScript	canremove_chest
 	OnInsertScript		oninsert_chest
-	CanInsertScript	caninsert_chest
+	CanInsertScript	caninsert_quiver
 	equipscript	:combat:item_equip
 	unequipscript	:combat:item_unequip
 }
