--- a/trunk/099/pkg/skills/craftingskills/tailoring/config/tailoring.cfg
+++ b/trunk/099/pkg/skills/craftingskills/tailoring/config/tailoring.cfg
@@ -529,6 +529,7 @@ tailoring 0x4000
 	time			1
 	mark		1
 	retain	1
+	Exceptional	1
 }
 
 tailoring 0x4002
@@ -540,6 +541,7 @@ tailoring 0x4002
 	time			1
 	mark		1
 	retain	1
+	Exceptional	1
 }
 
 tailoring 0x50d8
@@ -551,6 +553,7 @@ tailoring 0x50d8
 	time			1
 	mark		1
 	retain	1
+	Exceptional	1
 }
 
 tailoring 0x46aa
@@ -562,6 +565,7 @@ tailoring 0x46aa
 	time			1
 	mark		1
 	retain	1
+	Exceptional	1
 }
 
 tailoring 0x46b4
@@ -573,6 +577,7 @@ tailoring 0x46b4
 	time			1
 	mark		1
 	retain	1
+	Exceptional	1
 }
 
 // Armor
@@ -1368,6 +1373,7 @@ leather 0X2790
 leather 0X27db
 { 
 	Name			axe thrower
+	type		hide
 	material		30
 	skill		90
 	time			4
